--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     display: block;
     margin: 8px;
 
+
 }
 #playbutton {
     width: 100px;
@@ -32,4 +33,37 @@ h2{
     font-weight: bold;
     background-color:darkseagreen;
 
+}
+
+#result{
+    height: 200px;
+    width: 400px;
+    background-color: cornflowerblue;
+    margin:auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: 20px;
+    font-size: 30px;
+    text-align: center;
+    color: white;
+    display:none ;
+}
+
+#score{
+    font-size: 2.2rem;
+    color: brown;
+}
+#btnRestart{
+    padding: 0.5rem 1rem;
+    border-radius: 20px;
+    border: none;
+    background-color: black;
+    color: cyan;
+    font-size: 25px;
+    margin-top: 10px;
+    cursor: pointer;
+    text-transform: uppercase;
 }
